# deeponion-legacy

./: .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  COPYING  DeepOnion-qt.pro  INSTALL  Makefile.am  README.md  autogen.sh  configure.ac  leveldb.patch  make.exe.stackdump  tor-version.patch
contrib/Frameworks/: libboost_filesystem-mt.dylib  libboost_system-mt.dylib  libboost_system.dylib  libboost_thread.dylib
contrib/debian/: DeepOnion-qt.desktop  changelog  control  copyright  deeponion-qt.install  deeponion-qt.lintian.override  deeponiond.examples  deeponiond.install  deeponiond.lintian.override  deeponiond.manpages  rules  watch
contrib/debian/examples/: DeepOnion.conf
contrib/debian/manpages/: deeponion.conf.5
contrib/gitian-descriptors/: deps-win32.yml  gitian-win32.yml  gitian.yml
contrib/macdeploy/: background.tiff  custom_dsstore.py  detached-sig-apply.sh  detached-sig-create.sh  fancy.plist  macdeployqtplus  notes.txt
contrib/macdeploy/libs/@loader_path/: libboost_system-mt.dylib
doc/: README  README_windows.txt  build-appimage.md  build-debian-9.md  build-macos.md  build-msw.txt  build-osx.txt  build-tails.md  build-unix.md  build-unix.txt  build-wallet-howto.md  build-windows.md  build_macos.md  official_deb_install.md  readme-qt.rst  setup-meek.md  setup-obfs4.md
qa/pull-tester/: build-tests.sh  run-bitcoind-for-test.sh  tests_config.py
share/: setup.nsi
share/qt/: Info.plist.in
src/: Makefile.am  Makefile.leveldb.include  Makefile.qt.include  alert.cpp  anonymize.cpp  anonymize.h  base58.h  bignum.h  bitcoinrpc.cpp  bitcoinrpc.h  build.h  checkpoints.cpp  clientversion.h  crypter.cpp  daemon.cpp  db.cpp  db.h  deeponion-cli.cpp  deeponion-config.h  hash.h  hashblock.h  init.cpp  init.h  kernel.cpp  kernel.h  key.cpp  key.h  keystore.cpp  keystore.h  main.cpp  main.h  makefile.bsd  makefile.linux-mingw  makefile.mingw  makefile.osx  makefile.unix  miner.cpp  net.cpp  net.h  netbase.cpp  (+28 more)
src/config/: deeponion-config.h  deeponion-config.h.in
src/leveldb/: .gitignore  Makefile
src/m4/: bitcoin_qt.m4
src/qt/: aboutdialog.cpp  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  bantablemodel.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoin_locale.qrc  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  blockchaindialog.cpp  blockchaindialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  darktheme.h  editaddressdialog.cpp  editaddressdialog.h  global.cpp  global.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  lighttheme.h  menupage.cpp  menupage.h  messagemodel.cpp  messagemodel.h  messagepage.cpp  messagepage.h  (+49 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  askpassphrasedialog.ui  blockchaindialog.ui  coincontroldialog.ui  deepvaultpage.ui  editaddressdialog.ui  intro.ui  menupage.ui  menupage.ui.autosave  messagepage.ui  optionsdialog.ui  overviewpage.ui  qrcodedialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  sendmessagesdialog.ui  sendmessagesentry.ui  signverifymessagedialog.ui  transactiondescdialog.ui
src/qt/locale/: bitcoin_de.ts  bitcoin_en.qm  bitcoin_en.ts  bitcoin_es.qm  bitcoin_es.ts  bitcoin_fr.qm  bitcoin_fr.ts  bitcoin_nl.es  bitcoin_ptbr.ts  bitcoin_ru.qm  bitcoin_ru.ts  bitcoin_sc.qm  bitcoin_sc.ts  bitcoin_zh-CN.ts
src/qt/plugins/mrichtexteditor/: moc_mrichtextedit.cpp  mrichtextedit.cpp  mrichtextedit.h  mrichtextedit.ui  ui_mrichtextedit.h
src/qt/res/: bitcoin-qt.rc
src/qt/res/css/: default.css
src/qt/res/icons/: DeepOnion.icns
src/qt/res/movies/: loadermng.mng
src/tor/: anonymize.cpp  anonymize.h  config.c  rendservice.c
src/torlibs-win/: version.txt
